PS-2017.1 <benjamin@imac-alpixel Update filetypes.xml, PHP.xml, editor.xml	Create Default.xml

--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -1,5 +1,5 @@
 <templateSet group="PHP">
-  <template name="em" value="$entityManager = $this-&gt;get('doctrine.orm.entity_manager');" toReformat="true" toShortenFQNames="true">
+  <template name="em" value="$entityManager = $this-&gt;get('doctrine.orm.entity_manager');" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="PHP" value="true" />
     </context>
